MFC r268049: Fix ifconfig to show pltime and vltime with -L option, again after usage change from time_second to time_uptime.

PR:		188520
Submitted by:	Guy Yur <guyyur__at__gmail.com>